--- a/Lesson17/Task1/css/style.css
+++ b/Lesson17/Task1/css/style.css
@@ -1,35 +1,36 @@
-#inputs{
-    width: 100%;
+ #inputs{
+    width: 50%;
     display: flex;
     justify-content: center;
     margin: 15px 0;
+    flex-wrap: wrap;
 }
-#buttons{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-#buttons>button{
-    height: 45px;
-    width: 110px;
-    margin: 30px 15px 15px;     
-    font-size: 23px;
-    font-weight: bold;
-    border: 3px solid #000;
-    border-radius: 10%;
-    background-color: transparent;
-    color: #000;
-}
-input{
+input:first-child{
     text-align: center;
-    width: 55px;
-    height: 55px;
-    font-size: 35px;
-    padding: 4px;
+    padding: 13px;
+    font-size: 30px;
     background: #000;
     color: #fff;
     border: 0px;
+    margin: 10px 30%;
 }
-span{
-    font-size: 30px;
+input:nth-child(2),input:nth-child(3),input:nth-child(4){
+    color: #000;
+    font-size: 17px;
+    font-weight: bold;
+    border: 2px solid #000;
+    padding: 12px 25px;
+    margin: 10px 15px;
+    border-radius: 10px;
+}
+#marker{
+    background-color: lightgrey;
+    color: #fff;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    margin: 15px 0;
+    flex-wrap: wrap;
+    max-height: 200px;
+    overflow: scroll;
 }
